--- a/E-commerce/store/templates/store/layouts/main.html
+++ b/E-commerce/store/templates/store/layouts/main.html
@@ -93,7 +93,10 @@
         </script>
         <script>
         alertify.set('notifier','position', 'top-right');
-        {% for msg in messages %} alertify.success('{{msg}}');{% endfor %}
+        {% for msg in messages %}
+         var msg = alertify.success('{{msg}}');
+         msg.delay(1.3)
+         {% endfor %}
         </script>
         {% block scripts %}
         {% endblock scripts %}
