--- a/E-commerce/store/templates/store/orders/index.html
+++ b/E-commerce/store/templates/store/orders/index.html
@@ -1,6 +1,5 @@
 {% extends 'store/layouts/main.html' %}
 {% block content %}
-    My orders
     <div class="py-3 bg-primary">
         <div class="container">
             <a class="text-white" href="{% url 'home' %}">Home /</a>
@@ -26,9 +25,10 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                {% for item in orders %}
+                                {% for item,prod in zipped %}
                                     
                                     <tr>
+                                        <td>{{prod.name}}</td>
                                         <td>{{item.created_at}}</td>
                                         <td>{{item.tracking_no}}</td>
                                         <td>{{item.total_price}}</td>
@@ -44,5 +44,51 @@
                 </div>
             </div>
         </div>
+    </div>        
+    <div class="container" style="height:25vh; width:35vw; position: relative">
+        <canvas  id="myChart" ></canvas>
     </div>
+    
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@3.7.1/dist/chart.min.js"></script>
+    
+    <script>
+        const ctx = document.getElementById('myChart').getContext('2d');
+        const myChart = new Chart(ctx, {
+            type: 'bar',
+            data: {
+                labels: {{productnamesarray|safe}},
+                datasets: [{
+                    label: {{productnamesarray|safe}},
+                    data: {{productpricesarray|safe}},
+                    backgroundColor: [
+                        'rgba(255, 99, 132, 0.2)',
+                        'rgba(54, 162, 235, 0.2)',
+                        'rgba(255, 206, 86, 0.2)',
+                        'rgba(75, 192, 192, 0.2)',
+                        'rgba(153, 102, 255, 0.2)',
+                        'rgba(255, 159, 64, 0.2)'
+                    ],
+                    borderColor: [
+                        'rgba(255, 99, 132, 1)',
+                        'rgba(54, 162, 235, 1)',
+                        'rgba(255, 206, 86, 1)',
+                        'rgba(75, 192, 192, 1)',
+                        'rgba(153, 102, 255, 1)',
+                        'rgba(255, 159, 64, 1)'
+                    ],
+                    borderWidth: 1
+                }]
+            },
+            options: {
+                maintainAspectRatio: false,
+                responsive: true,
+                scales: {
+                    y: {
+                        beginAtZero: true
+                    }
+                }
+            }
+        });
+    </script>
+  
 {% endblock content %}
